Bug 155945 - DOCX: After a section break, a paragraph has an unexpected indentation in Writer
Summary: DOCX: After a section break, a paragraph has an unexpected indentation in Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: filter:docx
Depends on:
Blocks:
 
Reported: 2023-06-20 09:44 UTC by Mike Kaganski
Modified: 2023-06-22 19:03 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Paragraph with manually suppressed indentation (2.43 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-06-20 09:44 UTC, Mike Kaganski
Details
Paragraph with manually suppressed spacing above (1.85 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-06-21 08:35 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-06-20 09:44:46 UTC
Created attachment 188011 [details]
Paragraph with manually suppressed indentation

The minimized sample has a section break, and a paragraph with a style, where an indentation is defined; but the paragraph's direct formatting sets indentation to 0.

When opened in Writer, the paragraph after the break has an indentation.
Comment 1 Mike Kaganski 2023-06-21 08:26:48 UTC
Fixed in master by commit db115bec9254417ef7a3faf687478fe5424ab378

But the underlying problem still needs fixing.
Comment 2 Mike Kaganski 2023-06-21 08:35:49 UTC
Created attachment 188033 [details]
Paragraph with manually suppressed spacing above

Another sample, which is still not OK in master: this time, an unexpected spacing below appears in the paragraph after the break.
Comment 3 Commit Notification 2023-06-21 17:11:34 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b8ccf3dacb19e157d9b2c35cc2b083cb39e76da0

tdf#155945: do not turn another style attributes to direct formatting

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-06-22 19:03:25 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/eb2af5228922779fdd993125051db4e20c703106

tdf#155945: do not turn another style attributes to direct formatting

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.