tdf#155945: do not turn another style attributes to direct formatting

SwUnoCursorHelper::SetPropertyValues obtains the node's item set using
SwUnoCursorHelper::GetCursorAttr, adds new items for the property values,
and calls SwUnoCursorHelper::SetCursorAttr to set the updated item set
to the node. This puts all the item set data as direct formatting of the
node (autostyle).

For complex SfxPoolItem, containing several properties, it could result
in some properties having incorrect values e.g. in this sequence:

1. SwUnoCursorHelper::SetPropertyValues is called with a property sequence
   including "ParaStyleName" and "ParaTopMargin", represented by a complex
   SfxPoolItem (SvxULSpaceItem's nPropUpper). The current node uses another
   style, which has a non-default bottom margin; new style has 0 as bottom
   margin.
2. It builds a set for the union of all WhichIds corresponding to all the
   passed properties, which includes WIDs for paragraph style and for the
   respective SvxULSpaceItem.
3. It calls SwUnoCursorHelper::GetCursorAttr to fill the set with current
   values for these WhichIds, getting also values defined in still applied
   style, including an SvxULSpaceItem with both upper and lower spacing
   (the bottom margin value of old paragraph is stored there).
4. It sets new value of paragraph style in this item set, and then calls
   SwUnoCursorHelper::SetCursorAttr with the item set.

Now the set contains a new value for paragraph style, *and* an old value
of the paragraphs margins. This margins value is set as the paragraph's
direct formatting (autostyle).

5. SwUnoCursorHelper::GetCursorAttr is called, updating the item set with
   new values of paragraph style and margins; the direct-formatted value
   for the latter is returned, still containing the values previously
   inherited from old style.
6. New value of top margin is set, modifying only nPropUpper member of
   SvxULSpaceItem, and keeping nPropLower (value for bottom margin) as it
   was, i.e. keeps the value incorrectly saved from old style.

This happens e.g. on DOCX import. Commit db115bec9254417ef7a3faf687478fe5424ab378
(tdf#78510 sw,cui: split SvxLRSpaceItem for SwTextNode, SwTextFormatColl,
2023-02-24) has incidentally fixed handling of left and right paragraph
indents, making their items independent; but top/bottom margins still need
to be fixed.

This change splits the properties that cause side effects (styles) from the
rest; so that properties with side effects are processed first, with item
sets containing only one WID for the currently processed property. This
both allows to avoid the problem, and simplifies the code.

Change-Id: Idd451fa1e53806cdb6b9064dec31e9171d14d5d9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153384
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153408
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>